--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,18 +32,19 @@ dependencies:
   carousel_slider: ^4.2.1
   get: ^4.6.1
   get_time_ago: ^1.1.3
-
-
+  http: ^0.13.3 
+  onesignal_flutter: ^5.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_nav_bar: ^5.0.6
   shimmer: ^2.0.0
-
+  #cached_network_image: ^3.3.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
