--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,13 +33,16 @@ dependencies:
   get: ^4.6.1
   get_time_ago: ^1.1.3
   http: ^0.13.3 
-  onesignal_flutter: ^5.0.0
+  #onesignal_flutter: ^5.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_nav_bar: ^5.0.6
   shimmer: ^2.0.0
-  #cached_network_image: ^3.3.0
+  cached_network_image: ^3.3.0
+  url_launcher: ^6.1.11
+  connectivity_plus: ^4.0.2
+  awesome_dialog: ^3.1.0
   
 dev_dependencies:
   flutter_test:
