--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   url_launcher: ^6.1.11
   connectivity_plus: ^4.0.2
   awesome_dialog: ^3.1.0
+  geolocator: ^10.1.0
+  get_storage: ^2.1.1
   
 dev_dependencies:
   flutter_test:
@@ -82,12 +84,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Tajawal
+      fonts:
+        - asset: assets/Fonts/Tajawal-Black.ttf
+        - asset: assets/Fonts/Tajawal-Bold.ttf
+        - asset: assets/Fonts/Tajawal-Light.ttf
+        - asset: assets/Fonts/Tajawal-Medium.ttf
+        - asset: assets/Fonts/Tajawal-Regular.ttf
+        - asset: assets/Fonts/Tajawal-ExtraLight.ttf
+          style: italic
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
